--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-10 col-md-offset-1">
-					<form method="post" action="http://formspree.io/dimitardyankov.work@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Post"></form>
+					<form method="POST" action="http://formspree.io/dimitardyankov.work@gmail.com"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Confirm"></form>
 				</div>
 			</div>
 		</div>
