--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4">
-					<div id="fh5co-logo"><a href="index.html">Charlotte &amp; Dimitar</a></div>
+				<div class="col-xs-6">
+					<div id="fh5co-logo"><a href="index.html">C &amp; D</a></div>
 				</div>
-				<div class="col-xs-8 text-right menu-1">
+				<div class="col-xs-6 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">RSVP</a></li>
+						<li><a href="rsvp.html">RSVP</a></li>
 						<li><a href="contact.html">Schedule</a></li>
 						<li><a href="contact.html">Travel</a></li>
 						<li><a href="contact.html">Hotels</a></li>
@@ -98,7 +98,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
+					<h3>March 2nd, 2024 Hedsor House, UK</h3>
 					<p>We invited you to celebrate our wedding</p>
 				</div>
 			</div>
@@ -108,17 +108,17 @@
 						<img src="images/groom.jpg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
-						<h3>Joefrey Mahusay</h3>
+						<h3>Dimitar Dyankov</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
 				<div class="couple-half">
 					<div class="bride">
-						<img src="images/bride.jpg" alt="groom" class="img-responsive">
+						<img src="images/bride.jpeg" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
-						<h3>Sheila Mahusay</h3>
+						<h3>Charlotte Mulford</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
 					</div>
 				</div>
@@ -503,7 +503,7 @@
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-10 col-md-offset-1">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdtuTXQ7jLmTgacOz8oC7Thka_qh7IoEYh0aLy62vdBSKMMuA/viewform?embedded=true" width="640" height="605" frameborder="0" marginheight="0" marginwidth="0" style="margin: auto;">Loading…</iframe>			</div>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdtuTXQ7jLmTgacOz8oC7Thka_qh7IoEYh0aLy62vdBSKMMuA/viewform?embedded=true" width="100%" height="605" frameborder="0" marginheight="0" marginwidth="0" style="margin: auto;">Loading…</iframe>
 				</div>
 			</div>
 		</div>
