--- a/rsvp.html
+++ b/rsvp.html
@@ -58,7 +58,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-4">
-					<div id="fh5co-logo"><a href="index.html">Charlotte &amp; Dimitar</a></div>
+					<div id="fh5co-logo"><a href="index.html">C &amp; D</a></div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
