setting up all pages and links

--- a/hotels.html
+++ b/hotels.html
@@ -63,10 +63,10 @@
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li class="active"><a href="rsvp.html">RSVP</a></li>
+						<li><a href="rsvp.html">RSVP</a></li>
 						<li><a href="schedule.html">Schedule</a></li>
 						<li><a href="travel.html">Travel</a></li>
-						<li><a href="hotels.html">Hotels</a></li>
+						<li class="active"><a href="hotels.html">Hotels</a></li>
 						<li><a href="qanda.html">Q&amp;A</a></li>
 					</ul>
 				</div>
@@ -82,7 +82,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc">
-							<h1>RSVP</h1>
+							<h1>Hotels</h1>
 						</div>
 					</div>
 				</div>
@@ -132,4 +132,3 @@
 
 	</body>
 </html>
-
