--- a/schedule.html
+++ b/schedule.html
@@ -63,8 +63,8 @@
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li class="active"><a href="rsvp.html">RSVP</a></li>
-						<li><a href="schedule.html">Schedule</a></li>
+						<li><a href="rsvp.html">RSVP</a></li>
+						<li class="active"><a href="schedule.html">Schedule</a></li>
 						<li><a href="travel.html">Travel</a></li>
 						<li><a href="hotels.html">Hotels</a></li>
 						<li><a href="qanda.html">Q&amp;A</a></li>
@@ -82,7 +82,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc">
-							<h1>RSVP</h1>
+							<h1>Schedule</h1>
 						</div>
 					</div>
 				</div>
@@ -90,12 +90,55 @@
 		</div>
 	</header>
 
-
-	<div id="fh5co-couple">
+	<div id="fh5co-couple-story">
 		<div class="container">
 			<div class="row">
-				<div class="col-8">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdtuTXQ7jLmTgacOz8oC7Thka_qh7IoEYh0aLy62vdBSKMMuA/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0" style="margin: auto;">Loading…</iframe>
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+					<span>We Love Each Other</span>
+					<h2>Our Story</h2>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0">
+					<ul class="timeline animate-box">
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">First We Meet</h3>
+									<span class="date">December 25, 2015</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">First Date</h3>
+									<span class="date">December 28, 2015</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">In A Relationship</h3>
+									<span class="date">January 1, 2016</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</li>
+			    	</ul>
 				</div>
 			</div>
 		</div>
@@ -132,4 +175,3 @@
 
 	</body>
 </html>
-
