Updating text, links and mobile styling

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-6">
+				<div class="col-xs-6 col-sm-4">
 					<div id="fh5co-logo"><a href="index.html">C &amp; D</a></div>
 				</div>
-				<div class="col-xs-6 text-right menu-1">
+				<div class="col-xs-6 col-sm-8 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="rsvp.html">RSVP</a></li>
@@ -74,7 +74,7 @@
 							<h1>Charlotte &amp; Dimitar</h1>
 							<h2>We Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#rsvp" class="btn btn-default btn-sm">RSVP</a></p>
+							<p><a href="rsvp.html" class="btn btn-default btn-sm">RSVP</a></p>
 						</div>
 					</div>
 				</div>
