--- a/qanda.html
+++ b/qanda.html
@@ -46,10 +46,10 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4">
+				<div class="col-xs-6 col-sm-4">
 					<div id="fh5co-logo"><a href="index.html">C &amp; D</a></div>
 				</div>
-				<div class="col-xs-8 text-right menu-1">
+				<div class="col-xs-6 col-sm-8 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rsvp.html">RSVP</a></li>
