--- a/travel.html
+++ b/travel.html
@@ -46,10 +46,10 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4">
+				<div class="col-xs-6 col-sm-4">
 					<div id="fh5co-logo"><a href="index.html">C &amp; D</a></div>
 				</div>
-				<div class="col-xs-8 text-right menu-1">
+				<div class="col-xs-6 col-sm-8 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="rsvp.html">RSVP</a></li>
@@ -83,8 +83,20 @@
 	<div id="fh5co-couple">
 		<div class="container">
 			<div class="row">
-				<div class="col-8">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdtuTXQ7jLmTgacOz8oC7Thka_qh7IoEYh0aLy62vdBSKMMuA/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0" style="margin: auto;">Loading…</iframe>
+				<div class="col-xs-12">
+					<h2>HEDSOR HOUSE, HEDSOR PARK, TAPLOW, BUCKINGHAMSHIRE, SL6 0HX, UK</h1><br /><br /><br />
+
+					<h3>Flying <a href="https://maps.app.goo.gl/rxYn3KgvMJ6ibdmS6" target="_blank">Google Maps</a> | <a href="https://maps.apple.com/?address=Nelson%20Road,%20Hounslow,%20TW6%202GW,%20England&auid=4735285253083921871&ll=51.469702,-0.449431&lsp=9902&q=Heathrow%20Airport" target="_blank">Apple Maps</a> </h3>
+					<p>Heathrow is the closest airport with direct links to the tube which you can use to take the Elizabethan line directly to Taplow station which is 3.1 miles away from the venue (7min by car from station).</p>
+
+					<h3>Train <a href="https://maps.app.goo.gl/6A7MH4BsjYoQvjA69" target="_blank">Google Maps</a> | <a href="https://maps.apple.com/?address=Maidenhead,%20England&auid=9144778894434818501&ll=51.523422,-0.681851&lsp=9902&q=Taplow%20Station" target="_blank">Apple Maps</a></h3>
+					<p>You can take the Elizabethan line directly to Taplow station which is 3.1 miles away from the venue (7min by car from station). Also the overground train line to Taplow station also work.</p>
+
+					<h3>Driving <a href="https://maps.app.goo.gl/WFntqZ4Kwe8mCPTDA" target="_blank">Google Maps</a> | <a href="https://maps.apple.com/?address=Hedsor%20Park,%20Taplow,%20SL6%200HX,%20England&auid=14264011002051372971&ll=51.565522,-0.690710&lsp=9902&q=Hedsor%20House" target="_blank">Apple Maps</a> </h3>
+					<p>If you are driving to the venue you will need to go to HEDSOR HOUSE, HEDSOR PARK, TAPLOW, BUCKINGHAMSHIRE, SL6 0HX, UK</p>
+
+					<h3>Taxis <a href="" target="_blank">Google Maps</a> | <a href="" target="_blank">Apple Maps</a> </h3>
+					<p>Heathrow is the closest airport with direct links to the tube which you can use to take the Elizabethan line directly to Taplow station which is 3.1 miles away from the venue (7min by car from station).</p>
 				</div>
 			</div>
 		</div>
