Making styling changes

--- a/rsvp.html
+++ b/rsvp.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Charlotte & Dimitar Wedding" />
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -64,7 +64,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/img_bg_2.jpeg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/banner.jpeg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -85,6 +85,17 @@
 			<div class="row">
 				<div class="col-8">
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdtuTXQ7jLmTgacOz8oC7Thka_qh7IoEYh0aLy62vdBSKMMuA/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0" style="margin: auto;">Loading…</iframe>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="fh5co-thank-you" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpeg);">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Thank You</h2>
 				</div>
 			</div>
 		</div>
