Making changes to the travel page

--- a/travel.html
+++ b/travel.html
@@ -12,7 +12,11 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap" rel="stylesheet">
-	
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -83,20 +87,36 @@
 	<div id="fh5co-couple">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12">
-					<h2>HEDSOR HOUSE, HEDSOR PARK, TAPLOW, BUCKINGHAMSHIRE, SL6 0HX, UK</h1><br /><br /><br />
-
+				<div class="col-xs-1">
+					<span class="material-symbols-outlined" style="font-size: 100px;">flight</span>
+				</div>
+				<div class="col-xs-11" style="margin-bottom: 40px;">
 					<h3>Flying <a href="https://maps.app.goo.gl/rxYn3KgvMJ6ibdmS6" target="_blank">Google Maps</a> | <a href="https://maps.apple.com/?address=Nelson%20Road,%20Hounslow,%20TW6%202GW,%20England&auid=4735285253083921871&ll=51.469702,-0.449431&lsp=9902&q=Heathrow%20Airport" target="_blank">Apple Maps</a> </h3>
 					<p>Heathrow is the closest airport with direct links to the tube which you can use to take the Elizabethan line directly to Taplow station which is 3.1 miles away from the venue (7min by car from station).</p>
-
+				</div>
+				<div class="col-xs-1">
+					<span class="material-symbols-outlined" style="font-size: 100px;">train</span>
+				</div>
+				<div class="col-xs-11" style="margin-bottom: 40px;">
 					<h3>Train <a href="https://maps.app.goo.gl/6A7MH4BsjYoQvjA69" target="_blank">Google Maps</a> | <a href="https://maps.apple.com/?address=Maidenhead,%20England&auid=9144778894434818501&ll=51.523422,-0.681851&lsp=9902&q=Taplow%20Station" target="_blank">Apple Maps</a></h3>
-					<p>You can take the Elizabethan line directly to Taplow station which is 3.1 miles away from the venue (7min by car from station). Also the overground train line to Taplow station also work.</p>
-
+				<p>You can take the Elizabethan line directly to Taplow station which is 3.1 miles away from the venue (7min by car from station). Also the overground train line to Taplow station also work.</p>
+				</div>
+				<div class="col-xs-1">
+					<span class="material-symbols-outlined" style="font-size: 100px;">directions_car</span>
+				</div>
+				<div class="col-xs-11" style="margin-bottom: 40px;">
 					<h3>Driving <a href="https://maps.app.goo.gl/WFntqZ4Kwe8mCPTDA" target="_blank">Google Maps</a> | <a href="https://maps.apple.com/?address=Hedsor%20Park,%20Taplow,%20SL6%200HX,%20England&auid=14264011002051372971&ll=51.565522,-0.690710&lsp=9902&q=Hedsor%20House" target="_blank">Apple Maps</a> </h3>
-					<p>If you are driving to the venue you will need to go to HEDSOR HOUSE, HEDSOR PARK, TAPLOW, BUCKINGHAMSHIRE, SL6 0HX, UK</p>
-
+				<p>If you are driving to the venue you will need to go to HEDSOR HOUSE, HEDSOR PARK, TAPLOW, BUCKINGHAMSHIRE, SL6 0HX, UK</p>
+				</div>
+				<div class="col-xs-1">
+					<span class="material-symbols-outlined" style="font-size: 100px;">local_taxi</span>
+				</div>
+				<div class="col-xs-11" style="margin-bottom: 40px;">
 					<h3>Taxis <a href="" target="_blank">Google Maps</a> | <a href="" target="_blank">Apple Maps</a> </h3>
-					<p>Heathrow is the closest airport with direct links to the tube which you can use to take the Elizabethan line directly to Taplow station which is 3.1 miles away from the venue (7min by car from station).</p>
+				<p>Heathrow is the closest airport with direct links to the tube which you can use to take the Elizabethan line directly to Taplow station which is 3.1 miles away from the venue (7min by car from station).</p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 100px;">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2480.1457818333993!2d-0.6939069233764296!3d51.565560971826656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487663a34cd237c1%3A0xdade077d4ce23a90!2sHedsor%20House%20%26%20Park!5e0!3m2!1sen!2suk!4v1696099572828!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
 		</div>
@@ -112,7 +132,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
