Removing and adding schedule images and text

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Charlotte &amp; Dimitar</h1>
 							<h2>We Are Getting Married</h2>
+							<h2>Saturday 2nd March 2024, Hedsor House</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 						</div>
 					</div>
@@ -84,16 +85,17 @@
 	<div id="fh5co-couple">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Welcome to our wedding website</h2>
-					<h3>Saturday 2nd March 2024, Hedsor House</h3>
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading negative-margin-bottom animate-box">
+					<h2>Welcome to our wedding website!</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center" style="margin-bottom: 20px;"></div>
 				<div class="col-md-6"><img src="images/img_venue_1.png" style="width: 100%;"/></div>
 				<div class="col-md-6"><img src="images/img_venue_2.png" style="width: 100%;"/></div>
-				<div class="col-md-12 text-center" style="margin-top: 20px;"></div>
+				<div class="col-md-12 text-center" style="margin-top: 50px;">We can't wait to share our special day with you all!</div>
+				<div class="col-md-12 text-center" style="margin-top: 20px;">Here, you'll find all the information you need to know about our wedding including timings for the day, hotel recommendations and travel information. You can even leave us a song request if you'd like.</div>
+				<div class="col-md-12 text-center" style="margin-top: 20px;">Oh, and don't forget to <a href="rsvp.html">RSVP!</a></div>
 			</div>
 		</div>
 	</div>
