--- a/hotels.html
+++ b/hotels.html
@@ -80,7 +80,7 @@
 	</header>
 
 
-	<div id="fh5co-couple">
+	<div id="fh5co-couple" style="text-align: center;">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
