Final travel, hotel and qanda content

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 				<div class="col-md-12 text-center" style="margin-top: 50px;">We can't wait to share our special day with you all!</div>
 				<div class="col-md-12 text-center" style="margin-top: 20px;">Here, you'll find all the information you need to know about our wedding including timings for the day, hotel recommendations and travel information. You can even leave us a song request if you'd like.</div>
 				<div class="col-md-12 text-center" style="margin-top: 20px;">Oh, and don't forget to <a href="rsvp.html">RSVP!</a></div>
+				<div class="col-md-12 text-center" style="margin-top: 70px;"><h3>Hedsor House, Hedsor Park, Taplow, Buckinghamshire, SL6 0HX, UK</h3></div>
 			</div>
 		</div>
 	</div>
