--- a/qanda.html
+++ b/qanda.html
@@ -79,6 +79,48 @@
 		</div>
 	</header>
 
+	<div id="fh5co-couple" style="text-align: center;">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>What date is the event?</h3>
+					<p>Saturday 2nd March 2024.</p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>When is the RSVP deadline?</h3>
+					<p>Please RSVP by December 1st 2023.</p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>What is the address?</h3>
+					<p>Hedsor House, Hedsor Park, Taplow, Buckinghamshire, SL6 0HX, UK.</p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>What time do I need to arrive?</h3>
+					<p>Please arrive by 2pm for a 2:30pm ceremony.</p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>Where should I park?</h3>
+					<p>The venue has their own car park. Cars must not be left overnight unless guests are staying at Hedsor House. Please note, all cars need to vacate the car park by 10:00am the morning after the event.</p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>What is the dress code?</h3>
+					<p>The dress code for our wedding is formal attire. We ask that men wear suits and women wear formal gowns of any length and any colour. Hats and fascinators are also welcome. </p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>Is the wedding indoors or outdoors?</h3>
+					<p>Our wedding ceremony and reception are indoors.</p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>Will there be any vegan, vegetarian, gluten-free or special diet options?</h3>
+					<p>Yes! Please let us know of any dietary requirements when we email you with your menu choices.</p>
+				</div>
+				<div class="col-xs-12" style="margin-bottom: 40px;">
+					<h3>Do you have a gift registry?</h3>
+					<p>Your presence at our wedding is the greatest present we could ask for! However, for friends and family who have asked, a monetary gift towards our honeymoon would be very much appreciated. A wedding card box will be at our reception.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div id="fh5co-thank-you" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpeg);">
 		<div class="overlay"></div>
