first round of mobile fixes

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center" style="margin-bottom: 20px;"></div>
-				<div class="col-md-6"><img src="images/img_venue_1.png" style="width: 100%;"/></div>
-				<div class="col-md-6"><img src="images/img_venue_2.png" style="width: 100%;"/></div>
+				<div class="col-md-6" style="margin-top: 20px;"><img src="images/img_venue_1.png" style="width: 100%;"/></div>
+				<div class="col-md-6" style="margin-top: 20px;"><img src="images/img_venue_2.png" style="width: 100%;"/></div>
 				<div class="col-md-12 text-center" style="margin-top: 50px;">We can't wait to share our special day with you all!</div>
 				<div class="col-md-12 text-center" style="margin-top: 20px;">Here, you'll find all the information you need to know about our wedding including timings for the day, hotel recommendations and travel information. You can even leave us a song request if you'd like.</div>
 				<div class="col-md-12 text-center" style="margin-top: 20px;">Oh, and don't forget to <a href="rsvp.html">RSVP!</a></div>
