--- a/travel.html
+++ b/travel.html
@@ -85,7 +85,7 @@
 			<div class="row">
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>Taxis</h3>
-					<p>We strongly recommend pre-booking your taxi. Below we have listed the local taxi numbers. Please note all guest must depart by midnight.</p>
+					<p>We strongly recommend pre-booking your taxi. Below we have listed the local taxi numbers. Please note all guests must depart by midnight.</p>
 					<p>Windsor Cars – 01753 677 677</p>
 					<p>Burnham Cars – 01628 544 577</p>
 					<p>Golden Executive – 01628 622 955</p>
@@ -99,7 +99,7 @@
 				</div>
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>Parking</h3>
-					<p>The venue has a main car park, as well as an overflow car park field. Cars must not be left overnight unless guests are staying at Hedsor House. Please note, all cars need to vacate the car park by 10:00am the morning after the event. </p>
+					<p>The venue has a main car park, as well as an overflow car park field. Cars must not be left overnight, unless guests are staying at Hedsor House. Please note, all cars need to vacate the car park by 10:00am the morning after the wedding. </p>
 				</div>
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>Train</h3>
