fixing spelling mistakes

--- a/qanda.html
+++ b/qanda.html
@@ -100,7 +100,7 @@
 				</div>
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>Where should I park?</h3>
-					<p>The venue has their own car park. Cars must not be left overnight unless guests are staying at Hedsor House. Please note, all cars need to vacate the car park by 10:00am the morning after the event.</p>
+					<p>The venue has their own car park. Cars must not be left overnight, unless guests are staying at Hedsor House. Please note, all cars need to vacate the car park by 10:00am the morning after the wedding.</p>
 				</div>
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>What is the dress code?</h3>
