adding discount code

--- a/hotels.html
+++ b/hotels.html
@@ -88,7 +88,8 @@
 					<p>Taplow | 40 rooms | SL1 8LP | 01628 603131 | 2.2 miles</p>
 
 					<h3><a href="https://corushotels.com/burnham-beeches-hotel/" target="_blank">BURNHAM BEECHES</a></h3>
-					<p>Burnham | 82 rooms | SL1 8DP | 01628 429955 | 3.7 miles</p>
+					<p>Burnham | 82 rooms | SL1 8DP | 01628 429955 | 3.7 miles </p>
+					<p>Discount Code: MULFORDDYANKOV2MAR24</p>
 
 					<h3><a href="https://www.ihg.com/crowneplaza/hotels/gb/en/buckinghamshire/hyccp/hoteldetail" target="_blank">THE CROWNE PLAZA</a></h3>
 					<p>Beaconsfield | 138 rooms | HP9 2XE | 01753 893891 | 6.3 miles</p>
