--- a/qanda.html
+++ b/qanda.html
@@ -104,7 +104,7 @@
 				</div>
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>What is the dress code?</h3>
-					<p>The dress code for our wedding is formal attire. We ask that men wear suits and women wear formal gowns of any length and any colour. Hats and fascinators are also welcome. </p>
+					<p>The dress code for our wedding is formal attire. We ask that men wear suits and women wear suits, jumpsuits or gowns of any length and any colour. Hats and fascinators are also welcome. </p>
 				</div>
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>Is the wedding indoors or outdoors?</h3>
