--- a/qanda.html
+++ b/qanda.html
@@ -96,7 +96,7 @@
 				</div>
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>What time do I need to arrive?</h3>
-					<p>Please arrive by 2pm for a 2:30pm ceremony.</p>
+					<p>Please arrive anytime between 1:30pm and 2pm for a 2:30pm ceremony.</p>
 				</div>
 				<div class="col-xs-12" style="margin-bottom: 40px;">
 					<h3>Where should I park?</h3>
