--- a/schedule.html
+++ b/schedule.html
@@ -95,7 +95,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">2pm</h3>
-									<span class="date">Wedding guests arrive</span>
+									<span class="date">Wedding guests arrive by</span>
 								</div>
 								<div class="timeline-body">
 									<p></p>
